discussion/kv_engine/172521/172521_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-47139 magma-kvstore: Adapt to SetMaxOpenFiles API change

The global magma library method SetMaxOpenFiles() should be called only
after initializing atleast one magma db instance. The data structures
used by the method (memory guard switch) is only initialized during the
db instance construction.

The API is now moved to a db instance level method to
avoid the ambiguity of the API usage.

I75b60c85fc0590fbb722a7c604c6e445e66954da

Change-Id: I93ec86507e989337be03853507beb5545904381c

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Sarath Lakshman
Date: 2022-03-18 17:28:35.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2022-03-18 17:28:47.000000000
Message: 
Patch Set 1: Well-Formed-1

Branch restricted. PLEASE READ this URL: 

http://server.jenkins.couchbase.com/job/restricted-branch-check/291689/artifact/restricted.html : FAILURE
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2022-03-18 17:33:21.000000000
Message: 
Patch Set 1: Code-Review-1

(1 comment)
Line:705, engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc -> Is there any issue in changing this (just) after Magma instance has been created? ie could the limit be exceeded before here?

----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-03-18 17:36:31.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/76/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:705:16:
error: no member named "SetMaxOpenFiles" in "MagmaMemoryTrackingProxy"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/76/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/77/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:705:16: error: no member named "SetMaxOpenFiles" in "MagmaMemoryTrackingProxy" [clang-diagnostic-error]
        magma->SetMaxOpenFiles(configuration.getMaxFileDescriptors());
               ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/77/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:705:16:
error: no member named "SetMaxOpenFiles" in "MagmaMemoryTrackingProxy" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/77/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/103/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc(705): error C2039: "SetMaxOpenFiles": is not a member of "MagmaMemoryTrackingProxy" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/103/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/77/ : FAILURE

Compile error at [2022-03-18T17:31:54.871Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:705:16:
error: no member named "SetMaxOpenFiles" in "MagmaMemoryTrackingProxy"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/77/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/79/ : FAILURE

Compile error at [2022-03-18T17:31:18.637Z] /home/couchbase/jenkins/workspace/kv_engine.linux_neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:705:16:
error: ?class MagmaMemoryTrackingProxy? has no member named ?SetMaxOpenFiles?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/79/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/77/ : FAILURE

Compile error at [2022-03-18T17:31:53.985Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:705:16:
error: no member named "SetMaxOpenFiles" in "MagmaMemoryTrackingProxy"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/77/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/79/ : FAILURE

Compile error at [2022-03-18T17:31:47.296Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:705:16:
error: no member named "SetMaxOpenFiles" in "MagmaMemoryTrackingProxy"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/79/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/71/ : FAILURE

Compile error at [2022-03-18T17:33:23.177Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:705:16:
error: ?class MagmaMemoryTrackingProxy? has no member named ?SetMaxOpenFiles?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/71/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/80/ : FAILURE

Compile error at [2022-03-18T17:31:32.863Z] /Users/couchbase/workspace/workspace/kv_engine.macos_neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:705:16:
error: no member named "SetMaxOpenFiles" in "MagmaMemoryTrackingProxy"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/80/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/15004/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/80/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Sarath Lakshman
Date: 2022-03-18 17:44:42.000000000
Message: 
Patch Set 1:

(1 comment)
Line:705, engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc -> Oops. This was a premature gerrit push. Pushed the right one at https://review.couchbase.org/c/kv_engine/+/172523.

----------------------------------------------------------------------------------------------------------------------
Author: Sarath Lakshman
Date: 2022-03-18 17:44:53.000000000
Message: 
Abandoned
----------------------------------------------------------------------------------------------------------------------
